fix(hoco): position score list properly on mobile

--- a/intranet/static/css/hoco_scores.scss
+++ b/intranet/static/css/hoco_scores.scss
@@ -36,6 +36,7 @@
     #hoco-scores {
         width: 284px;
         zoom: 0.7;
+        left: calc(50% - 142px);
     }
 }
 
